# membrane-roles

zome/tests/: package-lock.json  package.json
zome/tests/src/: index.ts  install.ts
zome/workdir/dna/: roles.dna
zome/workdir/happ/: happ.yaml  roles.happ
zome/zomes/membrane_roles/: Cargo.toml
zome/zomes/membrane_roles/src/: assignment.rs  membrane_roles.rs
zome/zomes/profiles/: Cargo.toml
